--- a/views/customer-dashboard.mustache
+++ b/views/customer-dashboard.mustache
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="icons" />
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
@@ -20,7 +21,7 @@
     <header>
       <nav class="navbar fixed-top navbar-expand-lg bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/customer/dashboard">
             <img src="/images/small_logo.png" width="50" alt="Otto Logo" />
           </a>
           <button
@@ -41,7 +42,9 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Profile
+                {{#profile}}
+                  {{firstName}}'s Profile
+                 {{/profile}} 
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Account Settings</a></li>
@@ -346,8 +349,13 @@
 
     <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
       <div class="container-fluid text-center">
+      <!-- Facebook -->
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-twitter"></a>  
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-instagram"></a>
       </div>
     </footer>
 
