--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -19,7 +19,7 @@
     <header>
       <nav class="navbar fixed-top navbar-expand-lg bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/dealer/dashboard">
             <img src="/images/small_logo.png" width="50" alt="Otto Logo" />
           </a>
           <button
@@ -40,7 +40,10 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Profile
+                {{#userProfile}}
+                  {{firstName}}'s Profile
+                {{/userProfile}}
+                 
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Account Settings</a></li>
@@ -101,38 +104,40 @@
                 <div class="container">
 
                   <!-- INVENTORY TABLE -->
-                  <table class="table table-striped table-hover mt-4">
-                    <thead>
-                      <tr>
-                        <th scope="col">Listing ID</th>
-                        <th scope="col">Make</th>
-                        <th scope="col">Model</th>
-                        <th scope="col">Year</th>
-                        <th scope="col">Color</th>
-                        <th scope="col">Mileage</th>
-                        <th scope="col">Listed On</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {{#cars}}
-                      <tr>
-                        <form method="POST" action="/dealer/delete-car">
-                        <input type="hidden" value="{{ id }}" name="listingID"/>
-                        <th class="align-middle" scope="row">{{id}}</th>
-                        <td class="align-middle">{{make}}</td>
-                        <td class="align-middle">{{model}}</td>
-                        <td class="align-middle">{{year}}</td>
-                        <td class="align-middle">{{color}}</td>
-                        <td class="align-middle">{{mileage}}</td>
-                        <td class="align-middle">{{createdAt}}</td>
-                        <td class="align-middle">
-                          <button class="btn-sm rounded-3">Delete</button>
-                        </td>
-                        </form>
-                      </tr>
-                      {{/cars}}
-                    </tbody>
-                  </table>
+                  <div class="table-responsive-lg">
+                    <table class="table table-striped table-hover mt-4">
+                      <thead>
+                        <tr>
+                          <th scope="col">Listing ID</th>
+                          <th scope="col">Make</th>
+                          <th scope="col">Model</th>
+                          <th scope="col">Year</th>
+                          <th scope="col">Color</th>
+                          <th scope="col">Mileage</th>
+                          <th scope="col">Listed On</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {{#cars}}
+                        <tr>
+                          <form method="POST" action="/dealer/delete-car">
+                          <input type="hidden" value="{{ id }}" name="listingID"/>
+                          <th class="align-middle" scope="row">{{id}}</th>
+                          <td class="align-middle">{{make}}</td>
+                          <td class="align-middle">{{model}}</td>
+                          <td class="align-middle">{{year}}</td>
+                          <td class="align-middle">{{color}}</td>
+                          <td class="align-middle">{{mileage}}</td>
+                          <td class="align-middle">{{createdAt}}</td>
+                          <td class="align-middle">
+                            <button class="btn-sm rounded-3">Delete</button>
+                          </td>
+                          </form>
+                        </tr>
+                        {{/cars}}
+                      </tbody>
+                   </table>
+                  </div>
                   <div class="text-center">
                     {{^cars}} You have no cars in your inventory. {{/cars}}
                   </div>
@@ -239,40 +244,42 @@
           <div class="container">
 
             <!-- REQUEST TABLE -->
-            <table class="table table-striped table-hover mt-4">
-              <thead>
-                <tr>
-                  <th scope="col">Customer ID</th>
-                  <th scope="col">Make</th>
-                  <th scope="col">Model</th>
-                  <th scope="col">Min Year</th>
-                  <th scope="col">Max Year</th>
-                  <th scope="col">Color</th>
-                  <th scope="col">Max Mileage</th>
-                  <th scope="col">Requested On</th>
-                </tr>
-              </thead>
-              <tbody>
-                {{#requests}}
-                <tr>
-                  <form method="GET" action="/dealer/create-offer/{{customerID}}/{{id}}">
-                  <input type="hidden" value="{{ id }}" name="listingID"/>
-                  <th class="align-middle" scope="row">{{customerID}}</th>
-                  <td class="align-middle">{{make}}</td>
-                  <td class="align-middle">{{model}}</td>
-                  <td class="align-middle">{{minYear}}</td>
-                  <td class="align-middle">{{maxYear}}</td>
-                  <td class="align-middle">{{color}}</td>
-                  <td class="align-middle">{{maxMileage}}</td>
-                  <td class="align-middle">{{createdAt}}</td>
-                  <td class="align-middle">
-                    <button class="btn-sm rounded-3">Send an Offer</button>
-                  </td>
-                  </form>
-                </tr>
-                {{/requests}}
-              </tbody>
-            </table>
+              <div class= "table-responsive-lg">
+                <table class="table table-striped table-hover mt-4">
+                  <thead>
+                    <tr>
+                      <th scope="col">Customer ID</th>
+                      <th scope="col">Make</th>
+                      <th scope="col">Model</th>
+                      <th scope="col">Min Year</th>
+                      <th scope="col">Max Year</th>
+                      <th scope="col">Color</th>
+                      <th scope="col">Max Mileage</th>
+                      <th scope="col">Requested On</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {{#requests}}
+                    <tr>
+                      <form method="GET" action="/dealer/create-offer/{{customerID}}/{{id}}">
+                      <input type="hidden" value="{{ id }}" name="listingID"/>
+                      <th class="align-middle" scope="row">{{customerID}}</th>
+                      <td class="align-middle">{{make}}</td>
+                      <td class="align-middle">{{model}}</td>
+                      <td class="align-middle">{{minYear}}</td>
+                      <td class="align-middle">{{maxYear}}</td>
+                      <td class="align-middle">{{color}}</td>
+                      <td class="align-middle">{{maxMileage}}</td>
+                      <td class="align-middle">{{createdAt}}</td>
+                      <td class="align-middle">
+                        <button class="btn-sm rounded-3">Send an Offer</button>
+                      </td>
+                      </form>
+                    </tr>
+                    {{/requests}}
+                  </tbody>
+                </table>
+              </div>
             <div class="text-center">
               {{^requests}} There are no requests that match a car in your inventory. {{/requests}}
             </div>
@@ -285,40 +292,42 @@
           <div class="container">
 
             <!-- PENDING OFFERS TABLE -->
-            <table class="table table-striped table-hover mt-4">
-              <thead>
-                <tr>
-                  <th scope="col">Customer ID</th>
-                  <th scope="col">Price</th>
-                  <th scope="col">Make</th>
-                  <th scope="col">Model</th>
-                  <th scope="col">Year</th>
-                  <th scope="col">Color</th>
-                  <th scope="col">Mileage</th>
-                  <th scope="col">Listed On</th>
-                </tr>
-              </thead>
-              <tbody>
-                {{#pendingOffers}}
-                <tr>
-                  <form method="POST" action="/dealer/delete-offer">
-                  <input type="hidden" value="{{ id }}" name="offerID"/>
-                  <th class="align-middle" scope="row">{{customerID}}</th>
-                  <td class="align-middle">{{offerPrice}}</td>
-                  <td class="align-middle">{{make}}</td>
-                  <td class="align-middle">{{model}}</td>
-                  <td class="align-middle">{{year}}</td>
-                  <td class="align-middle">{{color}}</td>
-                  <td class="align-middle">{{mileage}}</td>
-                  <td class="align-middle">{{createdAt}}</td>
-                  <td class="align-middle">
-                    <button class="btn-sm rounded-3">Delete</button>
-                  </td>
-                  </form>
-                </tr>
-                {{/pendingOffers}}
-              </tbody>
-            </table>
+              <div class= "table-responsive-lg">
+                <table class="table table-striped table-hover mt-4">
+                  <thead>
+                    <tr>
+                      <th scope="col">Customer ID</th>
+                      <th scope="col">Price</th>
+                      <th scope="col">Make</th>
+                      <th scope="col">Model</th>
+                      <th scope="col">Year</th>
+                      <th scope="col">Color</th>
+                      <th scope="col">Mileage</th>
+                      <th scope="col">Listed On</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {{#pendingOffers}}
+                    <tr>
+                      <form method="POST" action="/dealer/delete-offer">
+                      <input type="hidden" value="{{ id }}" name="offerID"/>
+                      <th class="align-middle" scope="row">{{customerID}}</th>
+                      <td class="align-middle">{{offerPrice}}</td>
+                      <td class="align-middle">{{make}}</td>
+                      <td class="align-middle">{{model}}</td>
+                      <td class="align-middle">{{year}}</td>
+                      <td class="align-middle">{{color}}</td>
+                      <td class="align-middle">{{mileage}}</td>
+                      <td class="align-middle">{{createdAt}}</td>
+                      <td class="align-middle">
+                        <button class="btn-sm rounded-3">Delete</button>
+                      </td>
+                      </form>
+                    </tr>
+                    {{/pendingOffers}}
+                  </tbody>
+                </table>
+              </div>
             <div class="text-center">
               {{^pendingOffers}} You have no pending offers. {{/pendingOffers}}
             </div>
@@ -332,34 +341,36 @@
         <div class="tab-pane fade" id="accepted-offers-tab-pane" role="tabpanel" aria-labelledby="accepted-offers-tab-pane">
 
           <!-- ACCEPTED OFFERS TABLE -->
-          <table class="table table-striped table-hover mt-4">
-            <thead>
-              <tr>
-                <th scope="col">Customer ID</th>
-                <th scope="col">Price</th>
-                <th scope="col">Make</th>
-                <th scope="col">Model</th>
-                <th scope="col">Year</th>
-                <th scope="col">Color</th>
-                <th scope="col">Mileage</th>
-              </tr>
-            </thead>
-            <tbody>
-              {{#acceptedOffers}}
-              <tr>
-                <input type="hidden" value="{{ id }}" name="offerID"/>
-                <th class="align-middle" scope="row">{{customerID}}</th>
-                <td class="align-middle">{{offerPrice}}</td>
-                <td class="align-middle">{{make}}</td>
-                <td class="align-middle">{{model}}</td>
-                <td class="align-middle">{{year}}</td>
-                <td class="align-middle">{{color}}</td>
-                <td class="align-middle">{{mileage}}</td>
-                </form>
-              </tr>
-              {{/acceptedOffers}}
-            </tbody>
-          </table>
+          <div class= "table-responsive-lg">
+            <table class="table table-striped table-hover mt-4">
+              <thead>
+                <tr>
+                  <th scope="col">Customer ID</th>
+                  <th scope="col">Price</th>
+                  <th scope="col">Make</th>
+                  <th scope="col">Model</th>
+                  <th scope="col">Year</th>
+                  <th scope="col">Color</th>
+                  <th scope="col">Mileage</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{#acceptedOffers}}
+                <tr>
+                  <input type="hidden" value="{{ id }}" name="offerID"/>
+                  <th class="align-middle" scope="row">{{customerID}}</th>
+                  <td class="align-middle">{{offerPrice}}</td>
+                  <td class="align-middle">{{make}}</td>
+                  <td class="align-middle">{{model}}</td>
+                  <td class="align-middle">{{year}}</td>
+                  <td class="align-middle">{{color}}</td>
+                  <td class="align-middle">{{mileage}}</td>
+                  </form>
+                </tr>
+                {{/acceptedOffers}}
+              </tbody>
+            </table>
+          </div>
           <div class="text-center">
             {{^acceptedOffers}} You have no acceped offers. {{/acceptedOffers}}
           </div>
