--- a/views/delete-request.mustache
+++ b/views/delete-request.mustache
@@ -64,8 +64,8 @@
 
   <main class="container mt-4 py-5 ">
     <div class= "text-center">
-        <h1>Success!</h1>
-        <h2>A representative from the dealership will contact you with additonal information.</h2>
+       
+        <h1>You rejected this offer.</h1>
         <a href="/customer/dashboard">Return to Dashboard</a>
     </div>
   </main>
@@ -74,6 +74,7 @@
 
     <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
       <div class="container-fluid text-center">
+      <!-- Facebook -->
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-twitter"></a>  
         <a href="#" class="fa fa-google"></a>
