--- a/views/delete-request.mustache
+++ b/views/delete-request.mustache
@@ -43,7 +43,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 {{#profile}}
-                  {{firstName}}'s Profile
+                   Welcome, {{firstName}}
                  {{/profile}} 
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
