--- a/views/home.mustache
+++ b/views/home.mustache
@@ -1,8 +1,9 @@
 <html lang="en">
   <head>
     <link href="/css/style.css" rel="stylesheet"/>
+    <link href="/css/icons.css" rel="stylesheet" />
     <!-- CSS only -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -124,10 +125,16 @@
           <!-- FOOTER -->
 
           <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
-            <div class="container-fluid text-center">
-              <span class="text-muted">Created with Bootstrap v5.2.0</span>
-            </div>
-          </footer>
+      <div class="container-fluid text-center">
+      <!-- Facebook -->
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>  
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-instagram"></a>
+      </div>
+    </footer>
           
           <!-- JavaScript Bundle with Popper -->
           <script
