fixed navbar name display

--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -42,9 +42,9 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                {{#userProfile}}
-                 Welcome, {{firstName}}
-                {{/userProfile}}
+                {{#user}}
+                 Welcome, {{user}}
+                {{/user}}
                  
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
