--- a/views/customer-dashboard.mustache
+++ b/views/customer-dashboard.mustache
@@ -42,9 +42,9 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                {{#profile}}
+                {{#firstName}}
                    Welcome, {{firstName}}
-                 {{/profile}} 
+                 {{/firstName}} 
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Account Settings</a></li>
