--- a/views/customer-dashboard.mustache
+++ b/views/customer-dashboard.mustache
@@ -150,7 +150,7 @@
 
                     <!-- Add Car FORM -->
                     <form method="POST" action="/customer/dashboard">
-                      <div class="row">
+                      <div class="row text-align-left">
                         <div class="col-6">
                           <label for="modal-make" class="form-label ">Make:</label>
                           <select class="form-control" id="modal-make" data-target="make" name="make" required>
@@ -189,7 +189,7 @@
                         </div>
                       </div>
 
-                      <div class="row mt-4">
+                      <div class="row mt-4 text-align-left">
 
                         <div class="col-6">
                           <label for="modal-year" class="form-label">Year:</label>
@@ -230,7 +230,7 @@
                       <div class="row justify-content-center">
                         <div class="col-4 mt-3">
 
-                          <button class="btn btn-primary rounded-5">Add Car</button>
+                          <button class="btn btn-primary rounded-5">Submit Request</button>
                         </div>
 
                       </div>
