--- a/views/dealer-dashboard.mustache
+++ b/views/dealer-dashboard.mustache
@@ -1,65 +1,11 @@
 <html lang="en">
   <head>
-    <link href="/css/icons.css" rel="stylesheet" />
-    <link href="/css/style.css" rel="stylesheet" />
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OTTO</title>
+    {{>header}}
   </head>
   <body>
     <!-- NAVBAR -->
 
-    <header>
-      <nav class="navbar fixed-top navbar-expand-lg bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="/dealer/dashboard">
-            <img src="/images/small_logo.png" width="50" alt="Otto Logo" />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/dealer/dashboard">Dashboard</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                {{#user}}
-                 Welcome, {{user}}
-                {{/user}}
-                 
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Account Settings</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/account/logout">Log Out</a></li>
-                </ul>
-              </li>
-                </form>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+    {{> dealermenu}}
 
     <!-- MAIN SECTION -->
 
@@ -402,22 +348,6 @@
 
     <!-- FOOTER -->
 
-    <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
-      <div class="container-fluid text-center">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>  
-        <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-instagram"></a>
-      </div>
-    </footer>
-
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
+    {{> footer}}
   </body>
 </html>
