--- a/views/home.mustache
+++ b/views/home.mustache
@@ -1,64 +1,13 @@
 <html lang="en">
+ <!-- Import from partials/header Folder -->
   <head>
-    <link href="/css/style.css" rel="stylesheet"/>
-    <link href="/css/icons.css" rel="stylesheet" />
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OTTO</title>
+    {{> header}}
   </head>
     <body>
-
+ <!-- Import from partials/menu Folder -->
     <!-- NAVBAR -->
-    
-    <header>
-      <nav class="navbar fixed-top navbar-expand-lg bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img
-        src="/images/small_logo.png"
-        width="50"
-        alt="Otto Logo"
-      />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/account/register">Register</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about-us">How It Works</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/contact-us">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+    {{> menu}}
+
     <main class="container mt-4 py-5">
       
       <div class="container g-0" >
@@ -96,51 +45,60 @@
 
         <!-- LOG IN BANNER -->
 
-        <div class="container bg-dark"> 
-        <div class="row mb-sm-0">
+        <div class="container bg-dark mb-5"> 
+          <div class="row mb-sm-0">
 
-          <div class="row pt-4 pb-0">
+            <div class="row pt-4 pb-0">
+              <div class="d-flex justify-content-center">
+                <h3 id="tagline" class="text-light fw-lighter text-center">
+                  Sit back, relax, and let OTTO find your next car.
+                </h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="row mb-0 pb-2 pt-0">
             <div class="d-flex justify-content-center">
-              <h3 id="tagline" class="text-light fw-lighter text-center">
-                Sit back, relax, and let OTTO find your next car.
-              </h3>
+                <form method="GET" action="/account/login">
+                  <button class="btn btn-danger mt-4 mb-3 rounded-5">
+                  ENTER
+                  </button>
+              </form>
             </div>
           </div>
         </div>
-
-        <div class="row mb-0 pb-2 pt-0">
-          <div class="d-flex justify-content-center">
-              <form method="GET" action="/account/login">
-                <button class="btn btn-danger mt-4 mb-3 rounded-5">
-                ENTER
-                </button>
-            </form>
-          </div>
-        </div>
-
-        </div>
-
-          </main>
-
-          <!-- FOOTER -->
-
-          <footer class="footer fixed-bottom mt-auto mb-0 py-3 bg-light">
-      <div class="container-fluid text-center">
-      <!-- Facebook -->
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>  
-        <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-instagram"></a>
       </div>
-    </footer>
+       </main>
+
+
+
+         <div class="container mt-5 mb-5">
+ 
+            <div class="p-5">
+                <h2  id="HIW" class="text-center ">How It Works</h2>
+                {{! <h3 class="text-center ">Experience a new way shop for your next car</h3> }}
+              </div>
+            
+              <div class= "row mt-6 pb-5 ">
+                <div class="flex col-md-5 g-0 justify-content-center">
+                  <div class="column text-center width:100%">
+                  <h3>This </h3>
+                  <h4>This sidoasjiodsa </h4>
+                  </div>
+                </div>
+                <div class="flex col-md-7 g-0 mb-0">
+                  <div class= "container">
+                  <img src="images/signin2.png" style="width:100%" alt="" class="img-fluid width 100%" />
+                   </div>
+              
+                </div>
+              
+              
+              
+              </div>
+          </div>
+          <!-- FOOTER -->
+        {{>footer}}
           
-          <!-- JavaScript Bundle with Popper -->
-          <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-          crossorigin="anonymous"
-          ></script>
         </body>
 </html>
