added How It Works carousel and dashboard changes

--- a/views/partials/dealermenu.mustache
+++ b/views/partials/dealermenu.mustache
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-lg bg-light">
         <div class="container">
-          <a class="navbar-brand" href="/dealer/dashboard">
-            <img src="/images/small_logo.png" width="50" alt="Otto Logo" />
+          <a class="navbar-brand p-0 align-bottom" href="/dealer/dashboard">
+            <img src="/images/small_logo.png" width="100" alt="Otto Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -14,7 +14,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
             {{#authenticationMW}}
               <li class="nav-item">
