--- a/views/customer-dashboard.mustache
+++ b/views/customer-dashboard.mustache
@@ -289,7 +289,7 @@
                         </div> 
 
                         <div class="text-center">
-                          {{^myOffers}} You have no offers yet. {{/myOffers}}
+                          {{^myOffer}} You have no offers yet. {{/myOffer}}
                         </div>
                     </div>
         
