--- a/views/home.mustache
+++ b/views/home.mustache
@@ -22,7 +22,7 @@
 
             <div class="col-md-7 g-0 mb-0">
               
-              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+              <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -45,7 +45,7 @@
 
         <!-- LOG IN BANNER -->
 
-        <div class="container bg-dark mb-5"> 
+        <div class="container bg-dark mb-5 pb-1"> 
           <div class="row mb-sm-0">
 
             <div class="row pt-4 pb-0">
@@ -70,43 +70,44 @@
       </div>
        </main>
 
-        <div class="container col-10 mt-5 mb-5">
+       <!-- HOW TO SECTION -->
+        <div id="HIW" class="container col-12 my-5 py-5">
 
-          <h2 id="HIW" class="text-center">How It Works</h2>
+          <h2 class="my-5 pt-5 text-center">How It Works</h2>
 
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
+            <div id="howToCarousel" class="carousel slide" data-bs-ride="true">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#howToCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#howToCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#howToCarousel" data-bs-slide-to="2" aria-label="Slide 2"></button>
+              </div>
               <div class="carousel-inner">
-                <div class="carousel-item">
-                  <img class="d-block w-100 active" src="/images/audi_rs3.jpeg" alt="First slide">
+                <div class="carousel-item active">
+                  <img class="d-block w-100 active" src="/images/customer_makes_request.png" alt="First slide" style="object-fit: cover; width: 100%;">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="/images/audi_rs3.jpeg" alt="Second slide">
+                  <img class="d-block w-100" src="/images/dealer_makes_offer.png" alt="Second slide" style="object-fit: cover; width: 100%;">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="/images/audi_rs3.jpeg" alt="Third slide">
+                  <img class="d-block w-100" src="/images/customer_reviews_offer.png" alt="Third slide" style=" object-fit: cover; width: 100%;">
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#howToCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#howToCarousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div> 
         </div>
 
         <!-- Contact us Form -->
-        <div class="container col-10 mt-5 mb-5">
+        <div id="contact-us" class="container col-10 my-5 pt-5">
  
           
-          <h2 id="contact-us" class="text-center ">Contact Us</h2>
+          <h2 class="mb-5 text-center ">Contact Us</h2>
           
         
           <div class="row">
