--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -1,5 +1,5 @@
     <footer class="footer fixed-bottom mt-5 py-1 bg-light">
-      <div class="container-fluid text-center">
+      <div class="container-fluid text-center my-1">
       <!-- Social Icons -->
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-twitter"></a>  
