fixed alignment for contact form

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -123,6 +123,8 @@
                 <label for="lastName">Last Name:</label>
                 <input type="text" class="form-control rounded-0 mt-2" id="lastName" placeholder="Last name" name="lastName">
               </div>
+            </div>
+            
           </div>
 
           <!-- Email address field -->
@@ -145,7 +147,7 @@
           </div>
           
 
-          <!-- Mesage field -->
+          <!-- Message field -->
           
           <div class="form-group mt-4">
             <label for="message">Message:</label>
@@ -153,7 +155,7 @@
           </div>
             
             <div class="row mt-3 justify-content-center">
-              <div class="col-6"> 
+              <div class="col-6 text-center"> 
                 <button class="btn btn-danger mt-3 mb-5 rounded-5 text-nowrap">Send</button>
               </div>
             </div>
